04_longhorn/ui/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: longhorn-ui-basicauth
  namespace: longhorn
spec:
  basicAuth:
    secret: longhorn-ui-auth
