04_longhorn/ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: longhorn-ui
  name: longhorn-ui
  namespace: longhorn
spec:
  type: ClusterIP
  selector:
    app: longhorn-ui
  ports:
  - name: web
    port: 8000
    targetPort: 8000
